syntax = "proto3";

message Player {
  string name = 1;
}

enum Trump {
  SPADES = 0;
  HEARTS = 1;
  CLUBS = 2;
  DIAMONDS = 3;
  NO_TRUMP = 4;
}

message Game {
  string name = 1;
  repeated Player players = 2;
  fixed64 trumps = 3;
  repeated fixed64 player_bids = 4;
  repeated fixed64 player_tricks = 5;
  uint32 start_dealer = 6;
  uint32 current_round = 7;
}